adding twitter link

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
     </nav>
 
     <main>
-      <h2>Enthusiastic Developer <em>In London</em>.</h2>
+      <h2>Full Stack Developer</h2>
       <p>Find me on</p>
       <p><a href="https://github.com/pierrepln" class="cta--primary mylink">GitHub</a></p>
       <p><a href="https://plus.google.com/+PierrePLANTIE" class="cta--primary mylink">Google</a></p>
