--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@ P
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Hello I am Pierre Plantié, Full Stack Developer passionate about new technologies. I am a last year student at EPITECH - European Institute of Technology.">
-    <meta name="keywords" content="Plantié, Pierre, Pierre Plantié, developer, full stack, software, app, application, web, website, internet, pierre, plantié, blog, cv, C, C++, Java">
+    <meta name="keywords" content="Plantié, Pierre, Pierre Plantié, Plantie, Pierre Plantie, developer, full stack, software, app, application, site, web, website, internet, pierre, plantié, blog, cv">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Pierre Plantié">
     <title>Pierre Plantié Full Stack Developer</title>
