Update youtube channel link

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@ P
       <p><a href="https://plus.google.com/+PierrePLANTIE" class="cta--primary mylink">Google</a></p>
       <p><a href="https://www.facebook.com/pierreplnt" class="cta--primary mylink">Facebook</a></p>
       <p><a href="https://twitter.com/Pierre_pln" class="cta--primary mylink">Twitter</a></p>
-      <p><a href="http://www.youtube.com/c/PierrePLANTIE" class="cta--primary mylink">YouTube</a></p>
+      <p><a href="https://www.youtube.com/PierrePLANTIE" class="cta--primary mylink">YouTube</a></p>
     </main>
 
     <!-- build:js scripts/main.min.js -->
