--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@ P
     <meta name="keywords" content="Plantié, Pierre, Pierre Plantié, Plantie, Pierre Plantie, developer, full stack, software, app, application, site, web, website, internet, pierre, plantié, blog, cv">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Pierre Plantié">
-    <title>Pierre Plantié Full Stack Developer</title>
+    <title>Pierre Plantié - Full Stack Developer</title>
 
     <!-- Add to homescreen -->
     <link rel="manifest" href="manifest.json">
